# cli-web-scrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
docs/: 20251023-154754-WAF-Bypass-Scraper-Implementation.md
waf_bypass_scraper/: __init__.py  cli.py  formatters.py  parsers.py  scraper.py
