[project]
name = "waf-bypass-scraper"
version = "0.1.0"
description = "CLI tool to read WAF/Bot protected websites using curl_cffi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "trafilatura>=1.6.1",
]

[project.scripts]
waf-scraper = "waf_bypass_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
